--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,14 +32,14 @@ services:
         volumes:
             - /Users/Shared/docker/docker-compose/www:/www
         expose: 
-            - "9001"
+            - "9000"
     w_mysql:
         image: mysql:5.6
         volumes:
             - /Users/Shared/docker/docker-compose/data/mysql:/var/lib/mysql
         environment:
             TZ: 'Asia/Shanghai'
-            MYSQL_ROOT_PASSWORD: 123456
+            MYSQL_ROOT_PASSWORD: 'root'
         command: ['mysqld', '--character-set-server=utf8']
         ports:
             - 33061:3306
